--- a/form.htm
+++ b/form.htm
@@ -82,7 +82,7 @@
             <form action="./appres.htm">
                 <label for="name">Full Name:</label>
                 <input autocomplete="false" type="text" name="name" id="name" placeholder="Full Name">
-                <label for="dob">Date of Birth:</label>
+                <label for="dob">Date of Birth (optional):</label>
                 <input autocomplete="false" type="date" name="dob" id="dob" placeholder="dd/mm/yyyy">
                 <label for="position">Position:</label>
                 <select autocomplete="false" class="input" name="position" id="position">
