Fixed man display

--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,24 @@
         .logo {
             width: 270px;
         }
+
+        .man {
+            float: right;
+            margin: 0;
+            padding: 0;
+            margin-right: 13%;
+            border-radius: 5%;
+            margin-top: 5px;
+            width: 300px;
+            border: #f00 2px solid;
+        }
+
         @media only screen and (max-width: 650px) {
             .logo {
                 display: none;
+            }
+            .man {
+                float: unset;
             }
         }
     </style>
